--- a/app/src/main/res/layout/idoms_fragment.xml
+++ b/app/src/main/res/layout/idoms_fragment.xml
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Next"
-            android:id="@+id/button" />
+            android:id="@+id/btnNext" />
 
         <Button
             android:layout_width="wrap_content"
@@ -44,6 +44,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Check Answer"
-            android:id="@+id/button3" />
+            android:id="@+id/btnCheckAnswer" />
     </LinearLayout>
 </RelativeLayout>
