--- a/app/src/main/res/layout/idioms_fragment.xml
+++ b/app/src/main/res/layout/idioms_fragment.xml
@@ -7,7 +7,6 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
@@ -16,7 +15,7 @@
             android:layout_height="0dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Question"
-            android:id="@+id/textView"
+            android:id="@+id/tvQuestion"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1" />
@@ -26,7 +25,7 @@
             android:layout_height="0dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Answer"
-            android:id="@+id/textView2"
+            android:id="@+id/tvAnswer"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1" />
 
@@ -73,7 +72,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="@string/day"
-                android:id="@+id/textView3"
+                android:id="@+id/tvDay"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="0.50" />
 
