add radio button and modify UI
1. add radio button and function
2. modify sql query
3. modify Idioms fragment

--- a/app/src/main/res/layout/idioms_fragment.xml
+++ b/app/src/main/res/layout/idioms_fragment.xml
@@ -12,7 +12,7 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Question"
             android:id="@+id/tvQuestion"
@@ -22,7 +22,7 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Answer"
             android:id="@+id/tvAnswer"
@@ -31,7 +31,7 @@
 
         <Button
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:text="Check Answer"
             android:id="@+id/btnCheckAnswer"
             android:layout_weight="1" />
@@ -39,12 +39,12 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1">
 
             <Button
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="Pre"
                 android:id="@+id/btnPre"
@@ -52,7 +52,7 @@
                 android:layout_gravity="center_vertical" />
 
             <Button
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="Next"
                 android:id="@+id/btnNext"
@@ -62,8 +62,44 @@
         </LinearLayout>
 
         <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center_horizontal"
+            android:gravity="fill_vertical">
+
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center_vertical"
+                android:id="@+id/rdLevelGroup">
+
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Dreamer"
+                    android:id="@+id/rdDreamer"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:checked="true" />
+
+                <RadioButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Imaginer A"
+                    android:id="@+id/rdImaginerA"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1" />
+
+            </RadioGroup>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:weightSum="1">
 
