--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,11 +12,58 @@
     tools:context="jewoo.idioms.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <fragment
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:name="jewoo.idioms.IdiomsFragment"
-        android:id="@+id/fragment"
-        android:layout_centerVertical="true"
-        tools:layout="@layout/idioms_fragment" />
+    <TabHost
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/tabHost">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TabWidget
+                android:id="@android:id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"></TabWidget>
+
+            <FrameLayout
+                android:id="@android:id/tabcontent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:id="@+id/tabIdioms"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <fragment
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:name="jewoo.idioms.IdiomsFragment"
+                        android:id="@+id/fragment"
+                        android:layout_centerVertical="true"
+                        tools:layout="@layout/idioms_fragment" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/tabPatterns"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <fragment
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:name="jewoo.idioms.PatternsFragment"
+                        android:id="@+id/fragment2"
+                        tools:layout="@layout/patterns_fragment" />
+                </LinearLayout>
+
+            </FrameLayout>
+        </LinearLayout>
+    </TabHost>
+
+
 </RelativeLayout>
