--- a/app/src/main/res/layout/patterns_fragment.xml
+++ b/app/src/main/res/layout/patterns_fragment.xml
@@ -9,7 +9,8 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
         android:id="@+id/tvPattern"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:textColor="#ff0099"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -17,17 +18,18 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
         android:id="@+id/tvMeaning"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:textColor="#ff9900"/>
 
     <ExpandableListView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="384dp"
         android:id="@+id/elistPatterns"
-        android:layout_gravity="left|bottom|center_horizontal" />
+        android:layout_gravity="left|center_horizontal" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:weightSum="1">
 
         <TextView
