--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -5,17 +5,15 @@
     android:weightSum="1">
 
     <TextView
-        android:id="@+id/tvchild"
+        android:id="@+id/tvparent"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
+        android:textColor="#000000"
+        android:textSize="20dp"
+         />
 
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft" />
-
-    <!-- android:textSize="17dip"-->
-
-    <!--TextView
+    <!-- TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
